--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,8 +1,6 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  text-align: left;
 }
 
 .logo {
@@ -39,4 +37,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.fi {
+  margin-right: 5px;
 }
