--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Avenir, Helvetica, Arial, "Segoe UI Emoji",
+    "Apple Color Emoji", "Noto Color Emoji", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -24,8 +25,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
